[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://art/playerGrey_walk1.png" type="Texture" id=2]
[ext_resource path="res://art/playerGrey_walk2.png" type="Texture" id=3]
[ext_resource path="res://art/playerGrey_up1.png" type="Texture" id=4]
[ext_resource path="res://art/playerGrey_up2.png" type="Texture" id=5]
[ext_resource path="res://art/touch_left.png" type="Texture" id=6]
[ext_resource path="res://art/touch_left_pressed.png" type="Texture" id=7]
[ext_resource path="res://art/touch_right.png" type="Texture" id=8]
[ext_resource path="res://art/touch_right_pressed.png" type="Texture" id=9]
[ext_resource path="res://art/touch_jump.png" type="Texture" id=10]
[ext_resource path="res://art/touch_jump_pressed.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 26.5155
height = 13.8847

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 0.523804, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="Curve" id=5]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0.446289 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.306641 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 1.56945e-43
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Resource", "Scale", "Spread", "Tangential Accel", "Trail" ]

[node name="Player" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
SPEED = 400

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "right"
_sections_unfolded = [ "Region", "Transform", "Z" ]

[node name="Collision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Trail" type="Particles2D" parent="." index="2"]

show_behind_parent = true
emitting = true
amount = 10
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 7 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="GUI" type="CanvasLayer" parent="." index="3"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Left" type="TouchScreenButton" parent="GUI" index="0"]

modulate = Color( 0.00756836, 0.0078125, 0.00772672, 1 )
position = Vector2( 0, 601 )
scale = Vector2( 0.217918, 0.217918 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "touch_left"
visibility_mode = 0
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility" ]

[node name="Right" type="TouchScreenButton" parent="GUI" index="1"]

modulate = Color( 0.00756863, 0.00780392, 0.00772549, 1 )
position = Vector2( 90, 600 )
scale = Vector2( 0.217918, 0.217918 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "touch_right"
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Up" type="TouchScreenButton" parent="GUI" index="2"]

modulate = Color( 0.00756863, 0.00780392, 0.00772549, 1 )
self_modulate = Color( 0.921875, 0.867859, 0.867859, 1 )
position = Vector2( 390, 510 )
scale = Vector2( 0.217918, 0.217918 )
normal = ExtResource( 10 )
pressed = ExtResource( 11 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "touch_up"
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Down" type="TouchScreenButton" parent="GUI" index="3"]

modulate = Color( 0.00756863, 0.00780392, 0.00772549, 1 )
position = Vector2( 390, 690 )
scale = Vector2( 0.217918, -0.217918 )
normal = ExtResource( 10 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "touch_down"
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]

[connection signal="pressed" from="GUI/Left" to="." method="_on_Left_pressed"]

[connection signal="pressed" from="GUI/Right" to="." method="_on_Right_pressed"]

[connection signal="pressed" from="GUI/Up" to="." method="_on_Up_pressed"]

[connection signal="pressed" from="GUI/Down" to="." method="_on_Down_pressed"]


